# SmartHome

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Scripts/: main.py
SmartHome/: SmartHome.pro  ac.cpp  ac.h  analytics_model.cpp  analytics_model.h  hal.cpp  hal.h  histogram_widget.cpp  histogram_widget.h  home_config.cpp  home_config.h  icons_resource.qrc  light.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  media_player.cpp  media_player.h  player_controls.cpp  player_controls.h  playlist_model.cpp  playlist_model.h  sensor.cpp  sensor.h  smart_home_types.h  video_widget.cpp  video_widget.h
SmartHome/Core/: ac.cpp  ac.h  hal.cpp  hal.h  home_config.cpp  home_config.h  home_ctrl.cpp  home_ctrl.h  light.cpp  light.h  sensor.cpp  sensor.h  smart_home_types.h
SmartHome/Gui/: analytics_model.cpp  analytics_model.h  mainwindow.cpp  video_widget.cpp
SmartHome/Tui/: tui.cpp  tui.h
SmartHome/Ui/: mainwindow.h  player_controls.h  playlist_model.cpp  playlist_model.h
SmartHome/resource/: color_palette.txt
resource/: color_palette.txt  home_cfg.json  ini_cfg.json  pin_cfg.json  pins.json
